--- a/index.html
+++ b/index.html
@@ -618,6 +618,11 @@
         <div class="card-name">Task Status</div>
         <div class="card-desc">Check your submissions</div>
       </a>
+      <a href="strikes.html" class="card">
+        <div class="card-icon ic-red">⚠️</div>
+        <div class="card-name">Strikes</div>
+        <div class="card-desc">Check your strike record</div>
+      </a>
       <a href="activeness.html" class="card">
         <div class="card-icon ic-yellow">⚡</div>
         <div class="card-name">Activeness</div>
