--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
         <div class="card-name">Student List</div>
         <div class="card-desc">All class members</div>
       </a>
-      <a href="https://engquestviska.github.io/attendance.html" target="_blank" class="card">
+      <a href="attendance.html" class="card">
         <div class="card-icon ic-teal">✅</div>
         <div class="card-name">Attendance</div>
         <div class="card-desc">Student presence log</div>
