--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       color: var(--accent);
     }
 
+    .header-welcome { color: rgba(255,255,255,0.7); font-size: 0.88rem; margin-bottom: 12px; position: relative; z-index: 1; }
     .header-sub {
       margin-top: 10px;
       color: rgba(255,255,255,0.75);
@@ -531,10 +532,10 @@
   <h1>ENGLISH <span>QUEST</span></h1>
   <p class="header-sub">Information & Learning Portal · SMA Negeri 6 Surakarta</p>
 
+  <p class="header-welcome">Your one-stop hub for class documents, student data, and updates.</p>
   <div class="header-tags">
     <span class="tag">📖 English Class</span>
     <span class="tag">🏫 SMAVISKA</span>
-
   </div>
 </header>
 
@@ -546,14 +547,7 @@
 <!-- ── MAIN ── -->
 <main>
 
-  <!-- CTA BANNER -->
-  <div class="highlight-banner">
-    <div class="highlight-banner-text">
-      <h2>Welcome to English Quest 🚀</h2>
-      <p>Your one-stop hub for class documents, student data, and updates.</p>
-    </div>
-    <a href="#students" class="highlight-banner-btn">Explore →</a>
-  </div>
+
 
 
   <!-- HALL OF FAME -->
@@ -577,17 +571,17 @@
       <a href="lessons.html" class="card">
         <div class="card-icon ic-purple">📑</div>
         <div class="card-name">Lesson Materials</div>
-        <div class="card-desc">PPT & handouts</div>
+        <div class="card-desc">View & download lesson slides</div>
       </a>
       <a href="assignments.html" class="card">
         <div class="card-icon ic-blue">📋</div>
         <div class="card-name">Assignments</div>
-        <div class="card-desc">Task sheets & rubrics</div>
+        <div class="card-desc">Download task PDFs & instructions</div>
       </a>
       <a href="submission.html" class="card">
         <div class="card-icon ic-yellow">📝</div>
         <div class="card-name">Submission</div>
-        <div class="card-desc">Upload your work here</div>
+        <div class="card-desc">Submit your assignment links</div>
       </a>
 
     </div>
@@ -601,32 +595,32 @@
       <a href="students.html" class="card">
         <div class="card-icon ic-pink">👨‍🎓</div>
         <div class="card-name">Student List</div>
-        <div class="card-desc">All class members</div>
+        <div class="card-desc">Browse names & activeness stats</div>
       </a>
       <a href="attendance.html" class="card">
         <div class="card-icon ic-teal">✅</div>
         <div class="card-name">Attendance</div>
-        <div class="card-desc">Student presence log</div>
+        <div class="card-desc">View & record class attendance</div>
       </a>
       <a href="scores.html" class="card">
         <div class="card-icon ic-orange">🏆</div>
         <div class="card-name">Student Scores</div>
-        <div class="card-desc">Grades & assessments</div>
+        <div class="card-desc">Check chapter & final scores</div>
       </a>
       <a href="tasks.html" class="card">
         <div class="card-icon ic-green">✅</div>
         <div class="card-name">Task Status</div>
-        <div class="card-desc">Check your submissions</div>
+        <div class="card-desc">See which tasks are done or missing</div>
       </a>
       <a href="strikes.html" class="card">
         <div class="card-icon ic-red">⚠️</div>
         <div class="card-name">Strikes</div>
-        <div class="card-desc">Check your strike record</div>
+        <div class="card-desc">View strike count & reasons</div>
       </a>
       <a href="activeness.html" class="card">
         <div class="card-icon ic-yellow">⚡</div>
         <div class="card-name">Activeness</div>
-        <div class="card-desc">Class participation log</div>
+        <div class="card-desc">Real-time activeness tracker</div>
       </a>
 
     </div>
@@ -667,14 +661,7 @@
         </div>
         <div class="card-wide-arrow">›</div>
       </a>
-      <a href="#" class="card-wide">
-        <div class="card-wide-icon ic-pink">🎥</div>
-        <div class="card-wide-body">
-          <div class="card-wide-title">Video Tasks</div>
-          <div class="card-wide-sub">Tips, submissions & inspiration</div>
-        </div>
-        <div class="card-wide-arrow">›</div>
-      </a>
+
     </div>
   </div>
 
